--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,6 @@
 [build]
 target = "riscv64gc-unknown-none-elf"
-rustflags = ['-Clink-arg=-Tsrc/lds/qemu-virt.ld', '-Clink-arg=-n']
+rustflags = ['-Clink-arg=-Tsrc/lds/qemu-virt.ld', '-Clink-arg=-n', '--cfg=riscv']
 
 [target.riscv64gc-unknown-none-elf]
 runner = """\
