--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+arrayvec = { version = "0.7.2", default-features = false }
+bitflags = "1.3.2"
+lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 riscv = "0.8.0"
 sbi = "0.2.0"
 spin = "0.9.3"
+volatile = "0.3"
+
+[features]
