--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ spin = "0.9.3"
 virtio-drivers = { path = "vendor/virtio-drivers" }
 device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "2fa8411" }
 linked_list_allocator = "0.9.1"
+log = "0.4.17"
