--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ virtio-drivers = { path = "vendor/virtio-drivers" }
 device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "2fa8411" }
 linked_list_allocator = "0.9.1"
 log = "0.4.17"
+elf = { version = "0.7.2", default-features = false }
+
+[features]
