--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,7 @@ device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "2fa84
 linked_list_allocator = "0.9.1"
 log = "0.4.17"
 elf = { version = "0.7.2", default-features = false }
+bit_field = "0.10.2"
+bitflags = "2.0.2"
 
 [features]
